# liblite3client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_log.txt
include/lite3/: client.hpp  smart_client.hpp
src/: client.cpp  smart_client.cpp
test/: client_test_simple.cpp
